# easy_panda_sim

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
config/: panda_control.yaml
easy_panda_sim/: CMakeLists.txt  README.md  package.xml
easy_panda_sim/launch/: simulation.launch
easy_panda_sim/meshes/visual/: link2.dae  link5.dae  link7.dae  rgbd_camera.dae
easy_panda_sim/robots/: hand.xacro  panda_arm.urdf.xacro  panda_arm.xacro  panda_arm_world.urdf.xacro  rgbd_camera.gazebo.xacro  rgbd_camera.urdf.xacro  rgbd_camera.xacro
franka_gripper_sim/: CMakeLists.txt  package.xml
franka_gripper_sim/config/: franka_gripper_sim_control.yaml
franka_gripper_sim/include/: franka_gripper_sim.h
franka_gripper_sim/launch/: franka_gripper_sim.launch
franka_gripper_sim/src/: franka_gripper_sim.cpp  franka_gripper_sim_node.cpp
launch/: simulation.launch
meshes/visual/: link0.dae  link1.dae  link3.dae  link4.dae  link6.dae
robots/: hand.xacro  panda.transmission.xacro  panda_arm.xacro  panda_arm_world.urdf.xacro
