<?xml version="1.0"?>
<package format="2">
  <name>franka_gripper_sim</name>
  <version>0.0.0</version>
  <description>This package implements the franka gripper of type Franka Hand for the use in Gazebo with ROS</description>

  <author>Nicola Piga</author>
  <maintainer email="nicola.piga@iit.it">Nicola Piga</maintainer>
  <license>LGPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>franka_gripper</build_depend>

  <depend>roscpp</depend>

  <exec_depend>actionlib</exec_depend>

</package>
